[project]
name = "gorilla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.19.0",
    "anthropic>=0.69.0",
    "coloredlogs==15.0.1",
    "cryptography>=46.0.1",
    "datasets==2.16.1",
    "docker>=7.1.0",
    "docopt==0.6.2",
    "einops==0.7.0",
    "fastapi>=0.118.0",
    "google-api-python-client==2.118.0",
    "google-auth-oauthlib==1.2.0",
    "halo==0.0.31",
    "huggingface-hub==0.19.4",
    "langchain-experimental>=0.0.58",
    "langchain-openai>=0.1.5",
    "mdc==1.2.1",
    "mysql-connector-python>=9.4.0",
    "openai==1.10.0",
    "pandas==2.2.0",
    "prompt-toolkit==3.0.38",
    "protobuf==4.25.3",
    "pydantic==1.10.7",
    "pymysql==1.1.1",
    "pypdf2==3.0.1",
    "pytest==8.1.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "questionary==2.1.1",
    "rank-bm25==0.2.2",
    "requests==2.31.0",
    "sentencepiece==0.1.99",
    "simple-colors>=0.1.5",
    "tenacity==8.2.2",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "tqdm==4.65.0",
    "transformers==4.37.2",
    "tree-sitter==0.21.3",
    "tree-sitter-java==0.21.0",
    "tree-sitter-javascript==0.21.4",
    "uvicorn>=0.37.0",
    "waitress==3.0.0",
    "yarg==0.1.9",
]
